results/SpecGenBench/2-shot/log-CanConstruct-2023_11_05_22_54_32.txt
class CanConstruct {
    //@ ensures \result == (ransomNote.length() > magazine.length()) ==> false;
    //@ ensures \result == (\forall int i; 0 <= i && i < 26; cnt[i] >= 0);
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        //@ maintaining (\forall int i; 0 <= i && i < magazine.length(); cnt[magazine.charAt(i) - 'a'] == (\old(cnt[magazine.charAt(i) - 'a']) + 1));
        for (char c : magazine.toCharArray()) {
            cnt[c - 'a']++;
        }
        //@ maintaining (\forall int i; 0 <= i && i < ransomNote.length(); cnt[ransomNote.charAt(i) - 'a'] == (\old(cnt[ransomNote.charAt(i) - 'a']) - 1));
        //@ maintaining (\forall int i; 0 <= i && i < 26; cnt[i] >= 0);
        for (char c : ransomNote.toCharArray()) {
            cnt[c - 'a']--;
            if(cnt[c - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:3: error: cannot find symbol
    //@ ensures \result == (\forall int i; 0 <= i && i < 26; cnt[i] >= 0);
                                                             ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:9: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < magazine.length(); cnt[magazine.charAt(i) - 'a'] == (\old(cnt[magazine.charAt(i) - 'a']) + 1));
                                                                                                                ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:13: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < ransomNote.length(); cnt[ransomNote.charAt(i) - 'a'] == (\old(cnt[ransomNote.charAt(i) - 'a']) - 1));
                                                                                                                    ^
  symbol:   variable cnt
  location: class CanConstruct
3 errors

